--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -10,10 +10,26 @@
         <div class="menu">
             <div class="ui simple dropdown item">
                 <i class="dropdown icon"></i> ประเมินความเสี่ยง
-                <div class="menu">
-                    <a class="item" [routerLink]="['/int08-1']" routerLinkActive="active">ประเมินความเสี่ยงโครงการ</a>
-                    <a class="item" [routerLink]="['/int08-2']" routerLinkActive="active">ประเมินความเสี่ยงระบบสารสนเทศ</a>
-                    <a class="item" [routerLink]="['/int08-3']" routerLinkActive="active">ประเมินความเสี่ยงภาคพื้นที่</a>
+                <div class="menu" style="margin:20px;">
+                    <a class="item" [routerLink]="['/int08-1-1']" routerLinkActive="active">ประเมินความเสี่ยงโครงการ</a>
+                    <div class="ui dropdown item" routerLinkActive="active">
+                        <i class="dropdown icon"></i>ประเมินความเสี่ยงระบบสารสนเทศหลักของกรม
+                        <div class="menu">
+                            <a class="item" [routerLink]="['/int08-2']" routerLinkActive="active">ประเมินความเสี่ยงระบบสารสนเทศ (จำนวนครั้งที่ระบบใช้งานไม่ได้)</a>
+                            <a class="item" [routerLink]="['/int08-2-1']" routerLinkActive="active">ประเมินความเสี่ยงระบบสารสนเทศ (ร้อยละความเห็น)</a>
+                        </div>
+                    </div>
+                    <div class="ui dropdown item" routerLinkActive="active">
+                        <i class="dropdown icon"></i>ประเมินความเสี่ยงภาคพื้นที่
+                        <div class="menu">
+                            <a class="item" [routerLink]="['/int08-3-1']" routerLinkActive="active">ประเมินความเสี่ยงความถี่การตรวจ</a>
+                            <a class="item" [routerLink]="['/int08-3-2']" routerLinkActive="active">ประเมินความเสี่ยงผลการจัดเก็บรายได้</a>
+                            <a class="item" [routerLink]="['/int08-3-3-1']" routerLinkActive="active">ประเมินความเสี่ยงผลการปราบปราม</a>
+                            <a class="item" [routerLink]="['/int08-3-4']" routerLinkActive="active">ประเมินความเสี่ยงการเงินและบัญชี</a>
+                            <a class="item" [routerLink]="['/int08-3-5']" routerLinkActive="active">ประเมินความเสี่ยงระบบควบคุมภายใน</a>
+                            <a class="item" [routerLink]="['/int08-3-6']" routerLinkActive="active">ประเมินความเสี่ยงภาคพื้นที่รวม</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="ui dropdown item">
@@ -65,9 +81,12 @@
                     <a class="item" [routerLink]="['/int06-6']" routerLinkActive="active">ตรวจการเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ</a>
                 </div>
             </div>
-            <div class="ui simple dropdown item">
-                <a [routerLink]="['/int01-8-1']" style="color: #000;">ค้นหากระดาษทำการ</a>
-            </div>
+            <a class="item" [routerLink]="['/int01-8-1']" style="color: #000;">ค้นหากระดาษทำการ</a>
+            <a class="item" [routerLink]="['/int09-1']" style="color: #000;">ประมาณการค่าใช้จ่ายในการเดินทางไปราชการ
+            </a>
+
+
+
         </div>
     </div>
     <div class="ui simple dropdown item" *ngIf="authService.getLogin()" style=" color:White ">
