--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
@@ -1,11 +1,36 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ประเมินความเสี่ยงโครงการรวม</h2>
 
-    <div class="ui top attached header">
-      <span>ประเมินความเสี่ยงโครงการรวม</span>
+    <div class="ui large ordered steps" style="width: 280px;">
+      <div class=" step">
+        <div class="content">
+          <div class="title">ประเมิน
+          </div>
+          <div class="description">ความเสี่ยงโครงการด้านงบประมาณ </div>
+        </div>
+      </div>
+      <div class=" step">
+        <div class="content">
+          <div class="title">ประเมิน
+          </div>
+          <div class="description">ความเสี่ยงโครงการด้านประสิทธิภาพ</div>
+        </div>
+      </div>
+      <div class="active step">
+        <div class="content">
+          <div class="title">ประเมิน
+          </div>
+          <div class="description">ความเสี่ยงโครงการรวม</div>
+        </div>
+      </div>
     </div>
 
+  
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+        <span>ประเมินความเสี่ยงโครงการรวม
+        </span>
+      </div>
+  
     <div class="ui attached segment">
       <div class="ui right aligned grid">
         <div class="sixteen wide column">
@@ -119,37 +144,43 @@
               <th rowspan="2">หน่วยงาน</th>
               <th colspan="2">1.งบประมาณที่ใช้ตามแผนยุทธศาสตร์ที่กรมอนุมัติ</th>
               <th colspan="2">2.ประสิทธิภาพดำเนินงาน</th>
-              <th colspan="1">ค่าความเสี่ยงเฉลี่ย</th>
-              <th rowspan="2">แปลค่า</th>
+              <th rowspan="2">ค่าความเสี่ยงเฉลี่ย</th>
+              <th colspan="2">ประเมินความเสี่ยง</th>
             </tr>
             <tr style="text-align: center;">
               <th style="border-left: 1px solid rgba(34,36,38,.1); width: 8%;">RL</th>
               <th style="width: 8%;">แปลค่า</th>
               <th style="width: 8%;">RL</th>
               <th style="width: 8%;">แปลค่า</th>
-              <th style="width: 8%;">(1+2)/2</th>
+              <th style="width: 8%;">RL</th>
+              <th style="width: 8%;">แปลค่า</th>
             </tr>
           </thead>
           <tbody>
+
             <tr>
               <td>1</td>
               <td>9. โครงการซ่อมบำรุงรักษา สอบเทียบ และจัดหาอะไหล่ระบบเครื่องมือวัดปริมาณ น้ำสุราแช่ออนไลน์</td>
+
               <td>กตท.</td>
               <td>3</td>
               <td>สูง</td>
               <td>3</td>
               <td>สูง</td>
+              <td>3</td>
               <td class="bg-red">3</td>
               <td class="bg-red">สูง</td>
             </tr>
             <tr>
               <td>2</td>
               <td>10. โครงการติดตั้งเครื่องพิมพ์โค๊ดและระบบตรวจสอบการเสียภาษีสุราแช่แบบใหม่</td>
+
               <td>กตท.</td>
               <td>3</td>
               <td>สูง</td>
               <td>3</td>
               <td>สูง</td>
+              <td>3</td>
               <td class="bg-red">3</td>
               <td class="bg-red">สูง</td>
             </tr>
@@ -162,7 +193,8 @@
               <td>สูง</td>
               <td>2</td>
               <td>กลาง</td>
-              <td class="bg-red">2.5</td>
+              <td>2.5</td>
+              <td class="bg-red">3</td>
               <td class="bg-red">สูง</td>
             </tr>
             <tr>
@@ -173,7 +205,8 @@
               <td>สูง</td>
               <td>2</td>
               <td>กลาง</td>
-              <td class="bg-red">2.5</td>
+              <td>2.5</td>
+              <td class="bg-red">3</td>
               <td class="bg-red">สูง</td>
             </tr>
             <tr>
@@ -184,7 +217,8 @@
               <td>สูง</td>
               <td>2</td>
               <td>กลาง</td>
-              <td class="bg-red">2.5</td>
+              <td>2.5</td>
+              <td class="bg-red">3</td>
               <td class="bg-red">สูง</td>
             </tr>
             <tr>
@@ -195,7 +229,8 @@
               <td>สูง</td>
               <td>2</td>
               <td>กลาง</td>
-              <td class="bg-red">2.5</td>
+              <td>2.5</td>
+              <td class="bg-red">3</td>
               <td class="bg-red">สูง</td>
             </tr>
             <tr>
@@ -206,7 +241,8 @@
               <td>สูง</td>
               <td>2</td>
               <td>กลาง</td>
-              <td class="bg-red">2.5</td>
+              <td>2.5</td>
+              <td class="bg-red">3</td>
               <td class="bg-red">สูง</td>
             </tr>
             <tr>
@@ -217,6 +253,7 @@
               <td>สูง</td>
               <td>1</td>
               <td>ต่ำ</td>
+              <td>2</td>
               <td class="bg-yellow">2</td>
               <td class="bg-yellow">กลาง</td>
             </tr>
@@ -228,6 +265,7 @@
               <td>กลาง</td>
               <td>2</td>
               <td>กลาง</td>
+              <td>2</td>
               <td class="bg-yellow">2</td>
               <td class="bg-yellow">กลาง</td>
             </tr>
@@ -240,6 +278,7 @@
               <td>สูง</td>
               <td>2</td>
               <td>กลาง</td>
+              <td>2</td>
               <td class="bg-yellow">2</td>
               <td class="bg-yellow">กลาง</td>
             </tr>
@@ -251,6 +290,7 @@
               <td>สูง</td>
               <td>1</td>
               <td>ต่ำ</td>
+              <td>2</td>
               <td class="bg-yellow">2</td>
               <td class="bg-yellow">กลาง</td>
             </tr>
@@ -262,6 +302,7 @@
               <td>ต่ำ</td>
               <td>1</td>
               <td>ต่ำ</td>
+              <td>1</td>
               <td class="bg-green">1</td>
               <td class="bg-green">ต่ำ</td>
             </tr>
@@ -273,6 +314,7 @@
               <td>ต่ำ</td>
               <td>1</td>
               <td>ต่ำ</td>
+              <td>1</td>
               <td class="bg-green">1</td>
               <td class="bg-green">ต่ำ</td>
             </tr>
@@ -284,6 +326,7 @@
               <td>ต่ำ</td>
               <td>1</td>
               <td>ต่ำ</td>
+              <td>1</td>
               <td class="bg-green">1</td>
               <td class="bg-green">ต่ำ</td>
             </tr>
@@ -295,6 +338,7 @@
               <td>ต่ำ</td>
               <td>1</td>
               <td>ต่ำ</td>
+              <td>1</td>
               <td class="bg-green">1</td>
               <td class="bg-green">ต่ำ</td>
             </tr>
@@ -310,7 +354,7 @@
           <i class="arrow left icon"></i>
           ย้อนกลับ
         </button>
-        <button class="ui mini button" routerLink="/int08-1">
+        <button class="ui mini button" routerLink="/int08-1-1">
           <i class="home icon"></i>
           หน้าหลัก
         </button>
@@ -328,12 +372,7 @@
   <div class="content">
     <div class="ui form">
       <div class="inline fields">
-        <div class="sixteen wide field">
-          <button class="ui mini primary button">
-            <i class="add icon"></i>
-            เพิ่ม
-          </button>
-        </div>
+
       </div>
       <table id="tableSetting" class="ui small celled table" style="width: 100%;">
         <thead>
@@ -441,6 +480,10 @@
   <div class="actions">
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
+        <button class="ui mini primary button">
+          <i class="add icon"></i>
+          เพิ่ม
+        </button>
         <button class="ui mini primary button width-100">
           <i class="save icon"></i>
           บันทึก
@@ -462,14 +505,7 @@
 
   <div class="content">
     <div class="ui form">
-      <div class="inline fields">
-        <div class="sixteen wide field">
-          <button class="ui mini primary button">
-            <i class="add icon"></i>
-            เพิ่ม
-          </button>
-        </div>
-      </div>
+
 
       <div class="inline fields">
         <div class="eight wide field">
