--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-2/int08-3-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-2/int08-3-2.component.html
@@ -1,20 +1,47 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ประเมินการจัดเก็บรายได้</h2>
+   
 
-    <div class="ui top attached header">
-      <span>ประเมินการจัดเก็บรายได้</span>
-    </div>
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+        <span>ประเมินการจัดเก็บรายได้	 </span>
+      </div>
 
     <div class="ui attached segment">
       <div class="ui form">
-        <div class="inline fields">
-          <div class="nine wide field ">
-            <label style="width: 40em">ประเมินการจัดเก็บรายได้</label>
-            <input type="file" />
-          </div>
-        </div>
+          <div class="inline fields">
+              <div class="two wide field "></div>
+              <div class="two wide field ">
+                <label>เดือน</label>           
+              </div> 
+              <div class="four wide field ">
+              <select class="ui search dropdown">
+                  <option value="0">มกราคม</option>
+                  <option value="1">กุมพาพันธ์</option>
+                  <option value="2">มีนาคม</option>
+                  <option value="0">เมษายน</option>
+                  <option value="1">พฤษภาคม</option>
+                  <option value="2">มิถุนายน</option>
+                  <option value="0">กรกฎาคม</option>
+                  <option value="1">กันยายน</option>
+                  <option value="2">สิงหาคม</option>
+                  <option value="0">ตุลาตม</option>
+                  <option value="1">พฤศจิกายน</option>
+                  <option value="2">ธันวาคม</option>
+             </select>
+              </div>
+              <div class="two wide field ">
+                  <label>ปีงบประมาณ</label>           
+                </div> 
+                <div class="four wide field ">
+                <select class="ui search dropdown">
+                    <option value="0">2651</option>
+                    <option value="1">2560</option>
+                    <option value="2">2559</option>                   
+               </select>
+                </div>
+            </div>
       </div>
+      <br>
 
       <div class="ui center aligned grid">
         <div class="sixteen wide column">
@@ -144,176 +171,157 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>1</td>
-            <td>สสพ.ปัตตานี</td>
-            <td>3.494</td>
-            <td>6.561</td>
-            <td>
-              <font style="color: red">-3.07</font>
-            </td>
-            <td>
-              <font style="color: red">-46.74</font>
-            </td>
-            <td class="bg-red">3</td>
-            <td class="bg-red">สูง</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>สสพ.บึงกาฬ</td>
-            <td>3.138</td>
-            <td>5.235</td>
-            <td>
-              <font style="color: red">-2.1</font>
-            </td>
-            <td>
-              <font style="color: red">-40.05</font>
-            </td>
-            <td class="bg-red">3</td>
-            <td class="bg-red">สูง</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>สสพ.ตาก</td>
-            <td>71.027</td>
-            <td>96.134</td>
-            <td>
-              <font style="color: red">-25.11</font>
-            </td>
-            <td>
-              <font style="color: red">-26.12</font>
-            </td>
-            <td class="bg-red">3</td>
-            <td class="bg-red">สูง</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>สสพ. พระนครศรีอยุธยา 1</td>
-            <td>13,239.13</td>
-            <td>17,345.86</td>
-            <td>
-              <font style="color: red">-4,106.73</font>
-            </td>
-            <td>
-              <font style="color: red">-23.68</font>
-            </td>
-            <td class="bg-red">3</td>
-            <td class="bg-red">สูง</td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>สสพ.อุทัยธานี</td>
-            <td>16.611</td>
-            <td>21.264</td>
-            <td>
-              <font style="color: red">-4.65</font>
-            </td>
-            <td>
-              <font style="color: red">-21.88</font>
-            </td>
-            <td class="bg-red">3</td>
-            <td class="bg-red">สูง</td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td>สสพ.อุดรธานี</td>
-            <td>18.877</td>
-            <td>18.548</td>
-            <td>0.33</td>
-            <td>1.77</td>
-            <td class="bg-yellow">1</td>
-            <td class="bg-yellow">กลาง</td>
-          </tr>
-          <tr>
-            <td>7</td>
-            <td>สสพ.กำแพงเพชร</td>
-            <td>13,145.04</td>
-            <td>12,982.92</td>
-            <td>162.12</td>
-            <td>1.25</td>
-            <td class="bg-yellow">1</td>
-            <td class="bg-yellow">กลาง</td>
-          </tr>
-          <tr>
-            <td>8</td>
-            <td>สส.พท.อุบลราชธานี</td>
-            <td>2,527.32</td>
-            <td>2,496.34</td>
-            <td>30.98</td>
-            <td>1.24</td>
-            <td class="bg-yellow">1</td>
-            <td class="bg-yellow">กลาง</td>
-          </tr>
-          <tr>
-            <td>9</td>
-            <td>ภาคที่ 6</td>
-            <td>14,682.90</td>
-            <td>14,681.89</td>
-            <td>1.01</td>
-            <td>0.01</td>
-            <td class="bg-yellow">1</td>
-            <td class="bg-yellow">กลาง</td>
-          </tr>
-          <tr>
-            <td>10</td>
-            <td>สสพ.เพชรบุรี</td>
-            <td>64.635</td>
-            <td>27.745</td>
-            <td>36.89</td>
-            <td>132.96</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
-          <tr>
-            <td>11</td>
-            <td>สสพ.กทม.2</td>
-            <td>588.558</td>
-            <td>288.015</td>
-            <td>300.54</td>
-            <td>104.35</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
-          <tr>
-            <td>12</td>
-            <td>สสพ.มุกดาหาร</td>
-            <td>18.556</td>
-            <td>11.769</td>
-            <td>6.79</td>
-            <td>57.67</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
-          <tr>
-            <td>13</td>
-            <td>สส.พท.ยโสธร</td>
-            <td>5.52</td>
-            <td>3.695</td>
-            <td>1.83</td>
-            <td>49.39</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
-          <tr>
-            <td>14</td>
-            <td>สสพ. สิงห์บุรี</td>
-            <td>4.221</td>
-            <td>2.877</td>
-            <td>1.34</td>
-            <td>46.74</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
-          <tr>
-            <td>15</td>
-            <td>สสพ.ตราด</td>
-            <td>12.52</td>
-            <td>8.858</td>
-            <td>3.66</td>
-            <td>41.34</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
+           
+            <tr>
+                <td>1</td>
+                <td>สสพ.ปัตตานี</td>               
+                <td>3.494</td>
+                <td>6.561</td>
+                <td>-3.07</td>
+                <td>-46.74</td>
+                <td class="bg-red">3</td>
+                <td class="bg-red">สูง</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>สสพ.บึงกาฬ</td>              
+                <td>3.138</td>
+                <td>5.235</td>
+                <td>-2.1</td>
+                <td>-40.05</td>
+                <td class="bg-red">3</td>
+                <td class="bg-red">สูง</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>สสพ.ตาก</td>               
+                <td>71.027</td>
+                <td>96.134</td>
+                <td>-25.11</td>
+                <td>-26.12</td>
+                <td class="bg-red">3</td>
+                <td class="bg-red">สูง</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>สสพ. พระนครศรีอยุธยา 1</td>             
+                <td>13,239.13</td>
+                <td>17,345.86</td>
+                <td>-4,106.73</td>
+                <td>-23.68</td>
+                <td class="bg-red">3</td>
+                <td class="bg-red">สูง</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>สสพ.อุทัยธานี</td>              
+                <td>16.611</td>
+                <td>21.264</td>
+                <td>-4.65</td>
+                <td>-21.88</td>
+                <td class="bg-red">3</td>
+                <td class="bg-red">สูง</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>สสพ.อุดรธานี</td>              
+                <td>18.877</td>
+                <td>18.548</td>
+                <td>0.33</td>
+                <td>1.77</td>
+                <td class="bg-red"> 2</td>
+                <td class="bg-red">กลาง</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>สสพ.กำแพงเพชร</td>              
+                <td>13,145.04</td>
+                <td>12,982.92</td>
+                <td>162.12</td>
+                <td>1.25</td>
+                <td class="bg-yellow">2</td>
+                <td class="bg-yellow">กลาง</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>สส.พท.อุบลราชธานี</td>              
+                <td>2,527.32</td>
+                <td>2,496.34</td>
+                <td>30.98</td>
+                <td>1.24</td>
+                <td class="bg-yellow">2</td>
+                <td class="bg-yellow">กลาง</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>ภาคที่ 6</td>               
+                <td>14,682.90</td>
+                <td>14,681.89</td>
+                <td>1.01</td>
+                <td>0.01</td>
+                <td class="bg-yellow">2</td>
+                <td class="bg-yellow">กลาง</td>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>สสพ.มุกดาหาร</td>             
+                <td>18.556</td>
+                <td>11.769</td>
+                <td>6.79</td>
+                <td>57.67</td>
+                <td class="bg-yellow">2</td>
+                <td class="bg-yellow">กลาง</td>
+            </tr>
+            <tr>
+                <td>13</td>
+                <td>สส.พท.ยโสธร</td>              
+                <td>5.52</td>
+                <td>3.695</td>
+                <td>1.83</td>
+                <td>49.39</td>
+                <td class="bg-yellow">2</td>
+                <td class="bg-yellow">กลาง</td>
+            </tr>
+            <tr>
+                <td>14</td>
+                <td>สสพ. สิงห์บุรี</td>             
+                <td>4.221</td>
+                <td>2.877</td>
+                <td>1.34</td>
+                <td>46.74</td>
+                <td class="bg-yellow">2</td>
+                <td class="bg-yellow">กลาง</td>
+            </tr>
+            <tr>
+                <td>15</td>
+               <td>สสพ.ตราด</td>              
+                <td>12.52</td>
+                <td>8.858</td>
+                <td>3.66</td>
+                <td>41.34</td>
+                <td class="bg-yellow">2</td>
+                <td class="bg-yellow">กลาง</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>สสพ.เพชรบุรี</td>              
+                <td>64.635</td>
+                <td>27.745</td>
+                <td>36.89</td>
+                <td>132.96</td>
+                <td class="bg-green">1</td>
+                <td class="bg-green">ต่ำ</td>
+            </tr>
+            <tr>
+                <td>11</td>
+                <td>สสพ.กทม.2</td>            
+                <td>588.558</td>
+                <td>288.015</td>
+                <td>300.54</td>
+                <td>104.35</td>
+                <td class="bg-green">1</td>
+                <td class="bg-green">ต่ำ</td>
+            </tr>
         </tbody>
       </table>
     </div>
@@ -343,15 +351,7 @@
 
   <div class="content">
     <div class="ui form">
-      <div class="inline fields">
-        <div class="sixteen wide field">
-          <button class="ui mini primary button">
-            <i class="add icon"></i>
-            เพิ่ม
-          </button>
-        </div>
-      </div>
-
+    
       <table id="tableSetting" class="ui small celled table" style="width: 100%;">
         <thead>
           <tr class="center aligned">
@@ -457,6 +457,10 @@
   <div class="actions">
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
+          <button class="ui mini primary button">
+              <i class="add icon"></i>
+              เพิ่ม
+            </button>
         <button class="ui mini primary button width-100">
           <i class="save icon"></i>
           บันทึก
