--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
@@ -1,18 +1,21 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ประเมินควบคุมภายใน</h2>
 
-    <div class="ui top attached header">
-      <span>ประเมินควบคุมภายใน</span>
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>ประเมินควบคุมภายใน </span>
     </div>
+
 
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
-          <div class="nine wide field ">
-            <label style="width: 40em">ประเมินควบคุมภายใน</label>
+          <div class="five wide field "></div>
+          <div class="five wide field ">
             <input type="file" />
           </div>
+          <button class="ui mini primary button">
+            ตัวอย่างแบบฟอร์มนำเข้าระบบ
+          </button>
         </div>
       </div>
 
@@ -77,21 +80,21 @@
         </div>
 
         <div class="column" style="width: 15%; margin-left: -8%;">
-          &nbsp;
+            &nbsp;
           <br> ตำแหน่งว่าง
           <br> ตำแหน่งว่าง
           <br> ตำแหน่งว่าง
         </div>
 
         <div class="column" style="width: 11%;">
-          &nbsp;
+            &nbsp;
           <br> เท่ากับ
           <br> อยู่ระหว่าง
           <br> อยู่ระหว่าง
         </div>
 
         <div class="column right aligned" style="width: 6%;">
-          &nbsp;
+            &nbsp;
           <br> 0
           <br> 1 - 2
           <br>
@@ -99,28 +102,28 @@
         </div>
 
         <div class="column" style="width: 12%;">
-          &nbsp;
+            &nbsp;
           <br> กำหนดค่าเป็น
           <br> กำหนดค่าเป็น
           <br> กำหนดค่าเป็น
         </div>
 
         <div class="column" style="width: 6%;">
-          &nbsp;
+            &nbsp;
           <br> 1
           <br> 2
           <br> 3
         </div>
 
         <div class="column" style="width: 12%;">
-          &nbsp;
+            &nbsp;
           <br> กำหนดค่าเป็น
           <br> กำหนดค่าเป็น
           <br> กำหนดค่าเป็น
         </div>
 
         <div class="column" style="width: 5%;">
-          &nbsp;
+            &nbsp;
           <br> ต่ำ
           <br> กลาง
           <br> สูง
@@ -148,8 +151,8 @@
           <tr>
             <td>1</td>
             <td>สสพ.แม่ฮ่องสอน</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>0</td>
+            <td>0</td>
             <td>3</td>
             <td>3</td>
             <td class="bg-red">3</td>
@@ -158,9 +161,9 @@
           <tr>
             <td>2</td>
             <td>สสพ.ตราด</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
             <td class="bg-yellow">2</td>
             <td class="bg-yellow">กลาง</td>
@@ -168,9 +171,9 @@
           <tr>
             <td>3</td>
             <td>สส.พท.นครราชสีมา</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
             <td class="bg-yellow">2</td>
             <td class="bg-yellow">กลาง</td>
@@ -178,9 +181,9 @@
           <tr>
             <td>4</td>
             <td>สส.พท.บุรีรัมย์</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
             <td class="bg-yellow">2</td>
             <td class="bg-yellow">กลาง</td>
@@ -188,9 +191,9 @@
           <tr>
             <td>5</td>
             <td>สส.พท.อำนาจเจริญ</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
             <td class="bg-yellow">2</td>
             <td class="bg-yellow">กลาง</td>
@@ -198,9 +201,9 @@
           <tr>
             <td>6</td>
             <td>สสพ.นครพนม</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
             <td class="bg-yellow">2</td>
             <td class="bg-yellow">กลาง</td>
@@ -208,9 +211,9 @@
           <tr>
             <td>7</td>
             <td>สส.พท.ยโสธร</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
             <td class="bg-yellow">2</td>
             <td class="bg-yellow">กลาง</td>
@@ -218,9 +221,9 @@
           <tr>
             <td>8</td>
             <td>สสพ.ลำปาง</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
-            <td>&nbsp;</td>
+            <td>0</td>
             <td>2</td>
             <td class="bg-yellow">2</td>
             <td class="bg-yellow">กลาง</td>
@@ -229,8 +232,8 @@
             <td>9</td>
             <td>สสพ. ปทุมธานี 1</td>
             <td>1</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>0</td>
+            <td>0</td>
             <td>1</td>
             <td class="bg-green">1</td>
             <td class="bg-green">ต่ำ</td>
@@ -239,8 +242,8 @@
             <td>10</td>
             <td>สสพ. ปทุมธานี 2</td>
             <td>1</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>0</td>
+            <td>0</td>
             <td>1</td>
             <td class="bg-green">1</td>
             <td class="bg-green">ต่ำ</td>
@@ -249,8 +252,8 @@
             <td>11</td>
             <td>สสพ. สระบุรี</td>
             <td>1</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>0</td>
+            <td>0</td>
             <td>1</td>
             <td class="bg-green">1</td>
             <td class="bg-green">ต่ำ</td>
@@ -259,8 +262,8 @@
             <td>12</td>
             <td>สสพ. พระนครศรีอยุธยา 2</td>
             <td>1</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>0</td>
+            <td>0</td>
             <td>1</td>
             <td class="bg-green">1</td>
             <td class="bg-green">ต่ำ</td>
@@ -269,8 +272,8 @@
             <td>13</td>
             <td>สสพ.จันทบุรี</td>
             <td>1</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>0</td>
+            <td>0</td>
             <td>1</td>
             <td class="bg-green">1</td>
             <td class="bg-green">ต่ำ</td>
@@ -279,8 +282,8 @@
             <td>14</td>
             <td>สสพ.ฉะเชิงเทรา</td>
             <td>1</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>0</td>
+            <td>0</td>
             <td>1</td>
             <td class="bg-green">1</td>
             <td class="bg-green">ต่ำ</td>
@@ -289,8 +292,8 @@
             <td>15</td>
             <td>สสพ.ชลบุรี 2*</td>
             <td>1</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>0</td>
+            <td>0</td>
             <td>1</td>
             <td class="bg-green">1</td>
             <td class="bg-green">ต่ำ</td>
@@ -299,18 +302,7 @@
       </table>
     </div>
     <br>
-    <div class="ui center aligned grid">
-      <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/int08-3-4">
-          <i class="arrow left icon"></i>
-          ย้อนกลับ
-        </button>
-        <button class="ui mini button" routerLink="/int08-3-6">
-          ถัดไป
-          <i class="arrow right icon"></i>
-        </button>
-      </div>
-    </div>
+
 
   </div>
 </div>
@@ -318,17 +310,13 @@
 <div id="modalInt0835" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงระบบการควบคุมภายใน
-  </div>
+      กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงระบบควบคุมภายใน	  </div>
 
   <div class="content">
     <div class="ui form">
       <div class="inline fields">
         <div class="sixteen wide field">
-          <button class="ui mini primary button">
-            <i class="add icon"></i>
-            เพิ่ม
-          </button>
+
         </div>
       </div>
 
@@ -437,6 +425,10 @@
   <div class="actions">
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
+        <button class="ui mini primary button">
+          <i class="add icon"></i>
+          เพิ่ม
+        </button>
         <button class="ui mini primary button width-100">
           <i class="save icon"></i>
           บันทึก
