--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-6/int08-3-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-6/int08-3-6.component.html
@@ -1,10 +1,12 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ประเมินความเสี่ยงภาคพื้นที่รวม</h2>
 
-    <div class="ui top attached header">
-      <span>ประเมินความเสี่ยงภาคพื้นที่รวม</span>
+
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>ประเมินความเสี่ยงภาคพื้นที่รวม </span>
     </div>
+
+
 
     <div class="ui attached segment">
       <div class="ui right aligned grid">
@@ -41,7 +43,8 @@
       <br>
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
-          กระดาษทำสรุปการประเมินความเสี่ยงภาค พื้นที่ เพื่อพิจารณาคัดเลือกหน่วยงานรับตรวจสำนักงานสรรพสามิตภาค พื้นที่ และสาขา
+            กระดาษทำสรุปการประเมินความเสี่ยงภาค พื้นที่ เพื่อพิจารณาคัดเลือกหน่วยงานรับตรวจสำนักงานสรรพสามิตภาค พื้นที่ และสาขา																				
+
           <br> ปีงบประมาณ พ.ศ. 2561
           <br> กลุ่มตรวจสอบภายใน กรมสรรพสามิต
         </div>
@@ -122,25 +125,25 @@
           <thead>
             <tr style="text-align: center;">
               <th rowspan="2">ลำดับ</th>
-              <th rowspan="2">โครงการตามยุทธศาสตร์</th>
+              <th rowspan="2">หน่วยงาน</th>
               <th rowspan="2" style="width: 8%;">1.ระยะเวลาการ
                 <br>ตรวจสอบ (ปี)</th>
               <th colspan="2">ความเสี่ยง</th>
-              <th colspan="1">2.ประสิทธิภาพการจัดเก็บรายได้</th>
+              <th colspan="1">2.ประสิทธิภาพการจัดเก็บรายได้ (อัตราสูง/ต่ำเทียบกับประมาณการ)
+              </th>
               <th colspan="2">ความเสี่ยง</th>
-              <th colspan="2">3.ประสิทธิภาพการปราบปราม (อัตราสูง/ต่ำเทียบกับประมาณการ)</th>
+              <th rowspan="2">3.ประสิทธิภาพการปราบปราม (อัตราสูง/ต่ำเทียบกับประมาณการ)</th>
               <th colspan="2">ความเสี่ยง</th>
               <th rowspan="2" style="width: 8%;">4.ความเสี่ยงด้านการเงินและบัญชี</th>
               <th colspan="2">ความเสี่ยง</th>
               <th rowspan="2" style="width: 8%;">5. ควบคุมภายใน</th>
               <th colspan="2">ความเสี่ยง</th>
-              <th colspan="1">ค่าความเสี่ยงเฉลี่ย</th>
-              <th rowspan="2">แปลค่า</th>
+              <th rowspan="1">ค่าความเสี่ยงเฉลี่ย</th>
+              <th colspan="2">ประเมินความเสี่ยง</th>
             </tr>
             <tr style="text-align: center;">
               <th style="border-left: 1px solid rgba(34,36,38,.1); width: 8%;">ระดับ</th>
               <th style="width: 5%;">แปลค่า</th>
-              <th style="width: 5%;">ผลการจัดเก็บ (อัตราสูง/ต่ำเทียบกับประมาณการ)</th>
               <th style="width: 5%;">ระดับ</th>
               <th style="width: 5%;">แปลค่า</th>
               <th style="width: 5%;">จำนวนคดี</th>
@@ -151,34 +154,33 @@
               <th style="width: 5%;">แปลค่า</th>
               <th style="width: 5%;">ระดับ</th>
               <th style="width: 5%;">แปลค่า</th>
-              <th style="width: 5%;">(1+2+3)/3</th>
+              <th style="width: 5%;">RL</th>
+              <th style="width: 5%;">แปลค่า</th>
             </tr>
           </thead>
           <tbody>
+
             <tr>
               <td>1</td>
               <td>สสพ.แม่ฮ่องสอน</td>
               <td>9</td>
               <td>3</td>
               <td>สูง</td>
-              <td>
-                <font style="color: red">-1.63</font>
-              </td>
+              <td>-1.627952825</td>
               <td>3</td>
               <td>สูง</td>
-              <td>10.43</td>
-              <td>
-                <font style="color: red">-10.84</font>
-              </td>
-              <td>2</td>
-              <td>กลาง</td>
+              <td>10.43165468</td>
+              <td>-10.84157759</td>
+              <td>3</td>
+              <td>สูง</td>
               <td>6</td>
-              <td>1</td>
-              <td>ต่ำ</td>
+              <td>3</td>
+              <td>สูง</td>
               <td>3</td>
               <td>3</td>
               <td>สูง</td>
-              <td class="bg-red">2.4</td>
+              <td>2.4</td>
+              <td class="bg-red">3</td>
               <td class="bg-red">สูง</td>
             </tr>
             <tr>
@@ -187,22 +189,21 @@
               <td>9</td>
               <td>3</td>
               <td>สูง</td>
-              <td>
-                <font style="color: red">-4.67</font>
-              </td>
+              <td>-4.665721315</td>
               <td>3</td>
               <td>สูง</td>
-              <td>96.18</td>
-              <td>212.96</td>
-              <td>1</td>
-              <td>ต่ำ</td>
+              <td>96.18055556</td>
+              <td>212.9629352</td>
+              <td>2</td>
+              <td>กลาง</td>
               <td>7</td>
+              <td>3</td>
+              <td>สูง</td>
               <td>2</td>
-              <td>กลาง</td>
-              <td>2</td>
-              <td>2</td>
-              <td>กลาง</td>
-              <td class="bg-red">2.2</td>
+              <td>3</td>
+              <td>สูง</td>
+              <td>2.2</td>
+              <td class="bg-red">3</td>
               <td class="bg-red">สูง</td>
             </tr>
             <tr>
@@ -211,25 +212,22 @@
               <td>4</td>
               <td>2</td>
               <td>กลาง</td>
-              <td>
-                <font style="color: red">-17.57</font>
-              </td>
+              <td>-17.56933816</td>
               <td>3</td>
               <td>สูง</td>
-              <td>1.19</td>
-              <td>
-                <font style="color: red">-58.02</font>
-              </td>
+              <td>1.185185185</td>
+              <td>-58.02351455</td>
               <td>3</td>
               <td>สูง</td>
               <td>5</td>
               <td>1</td>
-              <td>ต่ำ</td>
+              <td>กลาง</td>
               <td>2</td>
               <td>2</td>
               <td>กลาง</td>
-              <td class="bg-red">2.2</td>
-              <td class="bg-red">สูง</td>
+              <td>1.4</td>
+              <td class="bg-yellow">2</td>
+              <td class="bg-yellow">กลาง</td>
             </tr>
             <tr>
               <td>4</td>
@@ -237,15 +235,11 @@
               <td>9</td>
               <td>3</td>
               <td>สูง</td>
-              <td>
-                <font style="color: red">-21.88</font>
-              </td>
+              <td>-21.88186639</td>
               <td>3</td>
               <td>สูง</td>
-              <td>56.48</td>
-              <td>
-                <font style="color: red">-5.33</font>
-              </td>
+              <td>56.48148148</td>
+              <td>-5.329047262</td>
               <td>2</td>
               <td>กลาง</td>
               <td>8</td>
@@ -254,8 +248,9 @@
               <td>1</td>
               <td>1</td>
               <td>ต่ำ</td>
-              <td class="bg-red">2.2</td>
-              <td class="bg-red">สูง</td>
+              <td>1.2</td>
+              <td class="bg-yellow">2</td>
+              <td class="bg-yellow">กลาง</td>
             </tr>
             <tr>
               <td>5</td>
@@ -263,17 +258,11 @@
               <td>3</td>
               <td>2</td>
               <td>กลาง</td>
-              <td>
-                <font style="color: red">-16.11</font>
-              </td>
+              <td>-16.10845195</td>
               <td>3</td>
               <td>สูง</td>
-              <td>
-                <font style="color: red">-34.46</font>
-              </td>
-              <td>
-                <font style="color: red">-21.46</font>
-              </td>
+              <td>-34.46327684</td>
+              <td>-21.45971662</td>
               <td>3</td>
               <td>สูง</td>
               <td>7</td>
@@ -282,142 +271,124 @@
               <td>1</td>
               <td>1</td>
               <td>ต่ำ</td>
-              <td class="bg-red">2.2</td>
-              <td class="bg-red">สูง</td>
+              <td>1.2</td>
+              <td class="bg-yellow">2</td>
+              <td class="bg-yellow">กลาง</td>
             </tr>
             <tr>
               <td>6</td>
-              <td>สสพ.ราชบุรี</td>
-              <td>9</td>
-              <td>3</td>
-              <td>สูง</td>
-              <td>
-                <font style="color: red">-7.02</font>
-              </td>
-              <td>3</td>
-              <td>สูง</td>
-              <td>29.08</td>
-              <td>131.84</td>
-              <td>1</td>
-              <td>ต่ำ</td>
-              <td>7</td>
+              <td>สสพ.ชุมพร</td>
+              <td>4</td>
               <td>2</td>
+              <td>กลาง</td>
+              <td>-1.910852909</td>
+              <td>3</td>
+              <td>สูง</td>
+              <td>-9.87654321</td>
+              <td>-22.07915251</td>
+              <td>3</td>
+              <td>สูง</td>
+              <td>3</td>
+              <td>1</td>
               <td>กลาง</td>
               <td>1</td>
               <td>1</td>
               <td>ต่ำ</td>
+              <td>1.2</td>
               <td class="bg-yellow">2</td>
               <td class="bg-yellow">กลาง</td>
             </tr>
             <tr>
               <td>7</td>
-              <td>สสพ.ชุมพร</td>
-              <td>4</td>
-              <td>2</td>
+              <td>สุราษฎร์ธานี</td>
+              <td>7</td>
+              <td>3</td>
+              <td>สูง</td>
+              <td>-12.14059727</td>
+              <td>3</td>
+              <td>สูง</td>
+              <td>-11.14583333</td>
+              <td>-79.07201245</td>
+              <td>3</td>
+              <td>สูง</td>
+              <td>0</td>
+              <td>1</td>
               <td>กลาง</td>
-              <td>
-                <font style="color: red">-1.91</font>
-              </td>
-              <td>3</td>
-              <td>สูง</td>
-              <td>
-                <font style="color: red">-9.88</font>
-              </td>
-              <td>
-                <font style="color: red">-22.08</font>
-              </td>
-              <td>3</td>
-              <td>สูง</td>
-              <td>3</td>
-              <td>1</td>
+              <td>0</td>
+              <td>0</td>
               <td>ต่ำ</td>
-              <td>1</td>
-              <td>1</td>
-              <td>ต่ำ</td>
+              <td>1.2</td>
               <td class="bg-yellow">2</td>
               <td class="bg-yellow">กลาง</td>
             </tr>
             <tr>
               <td>8</td>
-              <td>สุราษฎร์ธานี</td>
-              <td>7</td>
+              <td>สสพ.ปัตตานี</td>
+              <td>5</td>
+              <td>2</td>
+              <td>กลาง</td>
+              <td>-46.74243099</td>
               <td>3</td>
               <td>สูง</td>
-              <td>
-                <font style="color: red">-12.14</font>
-              </td>
+              <td>-0.4</td>
+              <td>-64.53740313</td>
               <td>3</td>
               <td>สูง</td>
-              <td>
-                <font style="color: red">-11.15</font>
-              </td>
-              <td>
-                <font style="color: red">-79.07</font>
-              </td>
-              <td>3</td>
-              <td>สูง</td>
-              <td>-</td>
+              <td>5</td>
+              <td>1</td>
+              <td>กลาง</td>
+              <td>1</td>
               <td>1</td>
               <td>ต่ำ</td>
-              <td>0</td>
-              <td>0</td>
-              <td>ต่ำ</td>
+              <td>1.2</td>
               <td class="bg-yellow">2</td>
               <td class="bg-yellow">กลาง</td>
             </tr>
             <tr>
               <td>9</td>
-              <td>สสพ.ปัตตานี</td>
-              <td>5</td>
+              <td>สสพ.ตราด</td>
+              <td>3</td>
               <td>2</td>
               <td>กลาง</td>
-              <td>
-                <font style="color: red">-46.74</font>
-              </td>
-              <td>3</td>
-              <td>สูง</td>
-              <td>
-                <font style="color: red">-0.4</font>
-              </td>
-              <td>
-                <font style="color: red">-64.54</font>
-              </td>
-              <td>3</td>
-              <td>สูง</td>
-              <td>5</td>
+              <td>41.3445044</td>
               <td>1</td>
               <td>ต่ำ</td>
-              <td>1</td>
-              <td>1</td>
-              <td>ต่ำ</td>
+              <td>-14.07407407</td>
+              <td>-17.15198986</td>
+              <td>3</td>
+              <td>สูง</td>
+              <td>8</td>
+              <td>2</td>
+              <td>กลาง</td>
+              <td>2</td>
+              <td>2</td>
+              <td>กลาง</td>
+              <td>1.8</td>
               <td class="bg-yellow">2</td>
               <td class="bg-yellow">กลาง</td>
             </tr>
             <tr>
               <td>10</td>
-              <td>สสพ.ตราด</td>
-              <td>3</td>
-              <td>2</td>
-              <td>กลาง</td>
-              <td>41.34</td>
-              <td>1</td>
-              <td>ต่ำ</td>
-              <td>
-                <font style="color: red">-14.07</font>
-              </td>
-              <td>
-                <font style="color: red">-17.15</font>
-              </td>
+              <td>สสพ.ราชบุรี</td>
+              <td>9</td>
               <td>3</td>
               <td>สูง</td>
-              <td>8</td>
+              <td>-7.018399872</td>
+              <td>3</td>
+              <td>สูง</td>
+              <td>29.08163265</td>
+              <td>131.8417411</td>
+              <td>1</td>
+              <td>ต่ำ</td>
+              <td>7</td>
               <td>2</td>
               <td>กลาง</td>
-              <td>2</td>
-              <td>2</td>
-              <td>กลาง</td>
-              <td class="bg-yellow">2</td>
-              <td class="bg-yellow">กลาง</td>
+              <td>1</td>
+              <td>1</td>
+              <td>ต่ำ</td>
+              <td>1</td>
+              <td class="bg-green">1</td>
+              <td class="bg-green">ต่ำ</td>
             </tr>
             <tr>
               <td>11</td>
@@ -425,19 +396,20 @@
               <td>5</td>
               <td>2</td>
               <td>กลาง</td>
-              <td>27.81</td>
+              <td>27.8113592</td>
               <td>1</td>
               <td>ต่ำ</td>
-              <td>9.52</td>
-              <td>11.21</td>
+              <td>9.523809524</td>
+              <td>11.20519199</td>
               <td>1</td>
               <td>ต่ำ</td>
-              <td>-</td>
+              <td>0</td>
               <td>1</td>
               <td>ต่ำ</td>
               <td>0</td>
               <td>0</td>
               <td>ต่ำ</td>
+              <td>0.8</td>
               <td class="bg-green">1</td>
               <td class="bg-green">ต่ำ</td>
             </tr>
@@ -447,21 +419,20 @@
               <td>3</td>
               <td>1</td>
               <td>ต่ำ</td>
-              <td>28.1</td>
+              <td>28.09742946</td>
               <td>1</td>
               <td>ต่ำ</td>
               <td>36</td>
-              <td>
-                <font style="color: red">-2.67</font>
-              </td>
+              <td>-2.665919283</td>
               <td>2</td>
               <td>กลาง</td>
-              <td>-</td>
+              <td>0</td>
               <td>1</td>
               <td>ต่ำ</td>
               <td>0</td>
               <td>0</td>
               <td>ต่ำ</td>
+              <td>0.8</td>
               <td class="bg-green">1</td>
               <td class="bg-green">ต่ำ</td>
             </tr>
@@ -471,33 +442,34 @@
               <td>3</td>
               <td>2</td>
               <td>กลาง</td>
-              <td>1.24</td>
+              <td>1.241118895</td>
               <td>1</td>
               <td>กลาง</td>
-              <td>8,883.33</td>
-              <td>33.85</td>
+              <td>8883.333333</td>
+              <td>33.8533431</td>
               <td>1</td>
               <td>ต่ำ</td>
-              <td>-</td>
+              <td>0</td>
               <td>1</td>
               <td>ต่ำ</td>
               <td>0</td>
               <td>0</td>
               <td>ต่ำ</td>
+              <td>0.6</td>
               <td class="bg-green">1</td>
               <td class="bg-green">ต่ำ</td>
             </tr>
             <tr>
               <td>14</td>
               <td>สสพ.กำแพงเพชร</td>
-              <td>4</td>
               <td>2</td>
-              <td>กลาง</td>
-              <td>1.25</td>
+              <td>1</td>
+              <td>ต่ำ</td>
+              <td>1.248715127</td>
               <td>1</td>
               <td>กลาง</td>
               <td>100</td>
-              <td>361.07</td>
+              <td>361.0685417</td>
               <td>1</td>
               <td>ต่ำ</td>
               <td>4</td>
@@ -506,29 +478,31 @@
               <td>1</td>
               <td>1</td>
               <td>ต่ำ</td>
-              <td class="bg-green">1.2</td>
+              <td>0.6</td>
+              <td class="bg-green">1</td>
               <td class="bg-green">ต่ำ</td>
             </tr>
             <tr>
               <td>15</td>
-              <td>สสพ.ขอนแก่น</td>
-              <td>1</td>
-              <td>1</td>
-              <td>ต่ำ</td>
-              <td>4.08</td>
+              <td>สสพ.ระยอง 1*</td>
+              <td>0</td>
               <td>1</td>
               <td>ต่ำ</td>
-              <td>221</td>
-              <td>216.11</td>
+              <td>2.641298215</td>
               <td>1</td>
               <td>ต่ำ</td>
-              <td>-</td>
+              <td>21.70542636</td>
+              <td>157.3737903</td>
+              <td>1</td>
+              <td>ต่ำ</td>
+              <td>0</td>
               <td>1</td>
               <td>ต่ำ</td>
               <td>0</td>
               <td>0</td>
               <td>ต่ำ</td>
-              <td class="bg-green">0.8</td>
+              <td>0.6</td>
+              <td class="bg-green">1</td>
               <td class="bg-green">ต่ำ</td>
             </tr>
           </tbody>
@@ -537,18 +511,7 @@
     </div>
 
     <br>
-    <div class="ui center aligned grid">
-      <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/int08-3-5">
-          <i class="arrow left icon"></i>
-          ย้อนกลับ
-        </button>
-        <button class="ui mini button" routerLink="/int08-3">
-          <i class="home icon"></i>
-          หน้าหลัก
-        </button>
-      </div>
-    </div>
+
   </div>
 </div>
 
@@ -560,14 +523,6 @@
 
   <div class="content">
     <div class="ui form">
-      <div class="inline fields">
-        <div class="sixteen wide field">
-          <button class="ui mini primary button">
-            <i class="add icon"></i>
-            เพิ่ม
-          </button>
-        </div>
-      </div>
 
       <table id="tableSetting" class="ui small celled table" style="width: 100%;">
         <thead>
@@ -674,6 +629,10 @@
   <div class="actions">
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
+        <button class="ui mini primary button">
+          <i class="add icon"></i>
+          เพิ่ม
+        </button>
         <button class="ui mini primary button width-100">
           <i class="save icon"></i>
           บันทึก
