--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-2/int08-3-3-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-2/int08-3-3-2.component.html
@@ -1,17 +1,69 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ประเมินคดีด้านจำนวนคดี</h2>
 
-    <div class="ui top attached header">
-      <span>ประเมินคดีด้านจำนวนคดี</span>
+
+    <div class="ui large ordered steps" style="width: 280px;">
+      <div class=" step">
+        <div class="content">
+          <div class="title"> ประเมินความเสี่ยง
+          </div>
+          <div class="description">ผลการปราบปรามด้านค่าปรับคดี </div>
+        </div>
+      </div>
+      <div class=" active step">
+        <div class="content">
+          <div class="title">ประเมินความเสี่ยง
+          </div>
+          <div class="description"> ผลการปราบปรามด้านจำนวณคดี</div>
+        </div>
+      </div>
+      <div class="step">
+        <div class="content">
+          <div class="title"> ประเมินความเสี่ยง
+          </div>
+          <div class="description">ผลการปราบปราม</div>
+        </div>
+      </div>
     </div>
+
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>สร้างกระดาษทำการประเมินความเสี่ยงผลการปราบปรามด้านจำนวนณคดี
+      </span>
+    </div>
+
 
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
-          <div class="nine wide field ">
-            <label style="width: 40em">ประเมินคดีด้านจำนวนคดี</label>
-            <input type="file" />
+          <div class="two wide field "></div>
+          <div class="two wide field ">
+            <label>เดือน</label>
+          </div>
+          <div class="four wide field ">
+            <select class="ui search dropdown">
+              <option value="0">มกราคม</option>
+              <option value="1">กุมพาพันธ์</option>
+              <option value="2">มีนาคม</option>
+              <option value="0">เมษายน</option>
+              <option value="1">พฤษภาคม</option>
+              <option value="2">มิถุนายน</option>
+              <option value="0">กรกฎาคม</option>
+              <option value="1">กันยายน</option>
+              <option value="2">สิงหาคม</option>
+              <option value="0">ตุลาตม</option>
+              <option value="1">พฤศจิกายน</option>
+              <option value="2">ธันวาคม</option>
+            </select>
+          </div>
+          <div class="two wide field ">
+            <label>ปีงบประมาณ</label>
+          </div>
+          <div class="four wide field ">
+            <select class="ui search dropdown">
+              <option value="0">2651</option>
+              <option value="1">2560</option>
+              <option value="2">2559</option>
+            </select>
           </div>
         </div>
       </div>
@@ -19,8 +71,8 @@
       <div class="ui center aligned grid">
         <div class="sixteen wide column">
           <button class="ui mini primary button" (click)="uploadData()">
-            <i class="upload icon"></i>
-            อัพโหลด
+            <i class="add icon"></i>
+            สร้างกระดาษทำการ
           </button>
           <button class="ui mini button" (click)="clearData()">
             <i class="refresh icon"></i>
@@ -339,14 +391,7 @@
 
   <div class="content">
     <div class="ui form">
-      <div class="inline fields">
-        <div class="sixteen wide field">
-          <button class="ui mini primary button">
-            <i class="add icon"></i>
-            เพิ่ม
-          </button>
-        </div>
-      </div>
+
 
       <table id="tableSetting" class="ui small celled table" style="width: 100%;">
         <thead>
@@ -453,6 +498,10 @@
   <div class="actions">
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
+        <button class="ui mini primary button">
+          <i class="add icon"></i>
+          เพิ่ม
+        </button>
         <button class="ui mini primary button width-100">
           <i class="save icon"></i>
           บันทึก
