--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -68,12 +68,15 @@
                             <div class="item">
                                 <div class="header">พิกัดสินค้า</div>
                                 <div class="menu">
-                                    <div class="item" *ngFor="let item of listMenu" (click)="selectExciseProductType(item)">-{{item}}</div>
+                                    <div class="item hover {{exciseProductType == item && 'active'}}" *ngFor="let item of listMenu" (click)="selectExciseProductType(item)">-{{item}}</div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="thirteen wide column" style="padding-top: 0">
+                        <div class="ui active inverted dimmer" *ngIf="onLoading">
+                            <div class="ui text loader">กำลังโหลด...</div>
+                        </div>
                         <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
                             <table id="userManagementDt" class="ui small celled table aligned hover" style="width: 5000px;">
                                 <thead id="trDrinamic">
